Add CSS File and Default HTML Code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+  <title>Aaron's Portfolio</title>
+
+</head>
+
+<body>
+
+  <div>
+
+  </div>
+
+</body>
+
+</html>
