--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html lang="en">
 
 <head>
-
-  <title>Aaron's Portfolio</title>
+    
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+    <title>Aaron's Portfolio</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
