--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
     <title>Aaron's Portfolio</title>
@@ -13,9 +13,7 @@
 
 <body>
 
-  <div>
-
-  </div>
+    <header>Software Developer</header>
 
 </body>
 
