Add h1, some classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
 
-    <header>Software Developer</header>
+    <header>
+        <h1 class="text-centered large-text">Software Developer</h1>
+    </header>
 
 </body>
 
