Add a few classes to header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
 
     <header>
-        <h1 class="text-centered large-text">Software Developer</h1>
+        <div class="wrapper">
+            <h1 class="text-centered large-text">Software Developer</h1>
+            <hr>
+        </div>
     </header>
 
 </body>
