Add some content below h1 in header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <div class="wrapper">
             <h1 class="text-centered large-text">Software Developer</h1>
+            <p class="text-centered">I am passionate about software, learning, and coding</p>
         </div>
     </header>
 
