Add icon image file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <div class="wrapper">
             <h1 class="text-centered large-text">Software Developer</h1>
             <p class="text-centered">I am passionate about software, learning, and coding</p>
+            <img src="/images/Aaron-icon.jpg" alt="Aaron icon">
         </div>
     </header>
+
+    <section class="intro">
+        <h2 class="text-centered">Hi! I'm Aaron and I am a Software Developer</h2>
+    </section>
 
 </body>
 
