--- a/index.html
+++ b/index.html
@@ -15,14 +15,54 @@
 
     <header>
         <div class="wrapper">
-            <h1 class="text-centered large-text">Software Developer</h1>
-            <p class="text-centered">I am passionate about software, learning, and coding</p>
-            <img src="/images/Aaron-icon.jpg" alt="Aaron icon">
+            <h1 class="text-centered large-text">Aaron Krenning</h1>
+            <p class="text-centered">I am passionate about software, coding, and most importantly, learning</p>
+            <img src="[[https://github.com/amkren/Portfolio/blob/main/images/clipart4674233.png|alt=manonamountain]]">
         </div>
     </header>
 
     <section class="intro">
-        <h2 class="text-centered">Hi! I'm Aaron and I am a Software Developer</h2>
+        <div class="wrapper">
+
+            <h2 class="text-centered">Hi! I'm Aaron</h2>
+
+            <p class="smaller-text text-centered">I am a software developer from St. Louis, MO</p>
+
+            <h3 class="text-centered color-text">Guest Service Associate Turned Developer</h3>
+
+            <p>As a guest service associate I learned all there is to know about how to talk to customers and deliver excellent service. 
+                Combining that with technical skills earned throughout my time in the Thinkful Software Developer Certification, 
+                I aim to begin an illustrious career in Software Development</p>
+
+                <h3 class="color-text">As a Developer I Aim To</h3>
+
+            <ul class="list">
+                <li>Create designs that are beautiful and eyecatching to the users</li>
+                <li>Create code that is beautiful and readable for my team</li>
+                <li>Create, iterate, recreate, and reiterate</li>
+            </ul>
+
+            <hr>
+        </div>
+    </section>
+
+    <section class="about-me">
+        <div class="wrapper">
+
+            <h2 class="text-centered">About Aaron</h2>
+
+            <h3 class="color-text"><i><b>Passionate, Creative, Driven</b></i></h3>
+            <p class="smaller-text">For years I have dreamed about being a developer, and I am now well on my way.
+                                    Putting towards 5 hours a day, minimum, I plan to finish my Thinkful 
+                                    program under the estimated time in order to ensure I can break into the industry and begin the learning process all over again.</p>
+
+            <h3 class="color-text">Things That I Enjoy Outside of Development</h3>
+            <ol class="list">
+                <li>Video Games: <i>Apex Legends, Borderlands, Skyrim</i></li>
+                <li>Books: <i>The Broken Empire Series, Dark Tower Series, Mistborn Trilogy</i></li>
+                <li>Walks, runs, playing with my Texas Heeler Indigo!</li>
+            </ol>
+        </div>
     </section>
 
 </body>
