--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <p class="smaller-text">For years I have dreamed about being a developer, and I am now well on my way.
                                     Putting towards 5 hours a day, minimum, I plan to finish my Thinkful 
                                     program under the estimated time in order to ensure I can break into the industry and begin the learning process all over again.</p>
+            <p class="smaller-text">In order to become a great developer, one must be willing to work in a team. 
+                As someone who has worked on many teams, in many different industries, I believe I can meld into any team, and perhaps lead just as well.</p>
 
             <h3 class="color-text">Things That I Enjoy Outside of Development</h3>
             <ol class="list">
